Updates from Overleaf

--- a/Intro-Ch2/Intro.tex
+++ b/Intro-Ch2/Intro.tex
@@ -176,7 +176,7 @@ Finally, the observed spectra from the \nueccnopinp and the \numu selections are
 \end{figure}
 
 \par The three $\nu_e$ selections developed in this work all provide strong input to the analysis. Figure~\ref{fig:intro:nueselections} shows the status of the box-cut \npsel (figure~\ref{fig:intro:nueselections:1eNp}), the BDT-based (figure~\ref{fig:intro:nueselections:1e0p}), and the BDT-based $\nu_e$ inclusive (figure~\ref{fig:intro:nueselections:inclusive}). \par The inclusive channel provides the analysis a tool with which to study the modeling of $\nu_e$ interactions, especially at higher energies, and provides a first validation even with the small dataset currently available. Moving forward, we are exploring ways to use this channel to quantitatively constrain high-energy $\nu_e$ modeling uncertainties.
-\par The 1$e$0$p$0$\pi$ channel obtains a purity of 49\%
+\par The 1$e$0$p$0$\pi$ channel obtains a purity of 49\% and, even though it currently primarily is sensitive to higher-energy $\nu_e$ interactions, provides a valuable validation of detector and modeling effects which can cause migration from the N$p$ to 0$p$ channel. 
 
 \begin{figure}[ht] 
 \begin{center}
