--- a/main.tex
+++ b/main.tex
@@ -70,11 +70,11 @@
 \newcommand{\numubarcc}{$\bar{\nu}_{\mu} CC$ }
 \newcommand{\npsel}{1$e$N$p$0$\pi$ }
 \newcommand{\zpsel}{1$e$0$p$0$\pi$ }
-
 \newcommand{\tabitem}{~~\llap{\textbullet}~~}
 
-\begin{document}
 
+
+\begin{document}
 \maketitle
 
 \abstract{The analysis presented in this note uses data from the MicroBooNE Experiment to measure  $\nu_e$ interactions from the Booster Neutrino Beamline using the Pandora reconstruction framework. Our goal is addressing the nature of the anomalous excess of low-energy events with EM activity in the final state as recorded by the MiniBooNE experiment. In this document, we outline the analysis strategy, focusing on the reconstruction and event selections performed, the evaluation of systematics associated to detector, flux, and neutrino-interaction modeling, and the expected sensitivity to the MB-$\nu_e$ LEE model utilizing the available BNB dataset of 10.1$\times 10^{20}$ POT. }
@@ -290,7 +290,7 @@ Alternatively to the box cut approach, a selection based on Boosted Decision Tre
 
 \emph{While the development of the BDT selection is fairly advanced, a few steps are needed before it is finalized. Current limitations are mainly related to the limited size of the samples that are available for training and to the ongoing calibration of the dEdx variables used in the BDT. The limited sample size can lead to overtraining and suboptimal performance, while the missing calibration can induce small data-MC disagreements.} 
 
-Because of these limitations, we deemed safer to consider only events that pass a loose set of cuts (Table~\ref{tab:1eNp:loosecut}) intended to reject events where one or more variables is clearly inconsistent with \nuecc interactions. The loose cuts are applied on top the of the preselection both before the BDT training and before the application of the BDT in the analysis. This selection enhances the relative population of \nuecc in the BNB overlay sample from about 1\% to more than 25\% (Fig.~\ref{fig:1eNp:loosesel}). \emph{In the final implementation of the BDT selection, the loose selection cuts may be revisited or removed}.
+Because of these limitations, we deemed safer to consider only events that pass a loose set of cuts (Table~\ref{tab:1eNp:loosecut}) intended to reject events where one or more variables is clearly inconsistent with $\nu_e$ CC interactions. The loose cuts are applied on top the of the preselection both before the BDT training and before the application of the BDT in the analysis. This selection enhances the relative population of $\nu_e$ CC in the BNB overlay sample from about 1\% to more than 25\% (Fig.~\ref{fig:1eNp:loosesel}). \emph{In the final implementation of the BDT selection, the loose selection cuts may be revisited or removed}.
 \begin{table}[h!]
 \centering
 \setlength{\tabcolsep}{10pt}
@@ -1192,7 +1192,7 @@ The contribution to the flux (left plot) as well as the oscillation probability 
 \end{center}
 \end{figure}
 
-The sensitivity is estimated using the \nuecc inclusive selection.
+The sensitivity is estimated using the $\nu_e$ CC inclusive selection.
 The left plot in figure \ref{fig:oscillation_sensitivity} shows the expected reconstructed shower energy spectrum in the presence of the signal.
 The right plot shows the distribution of the Poisson LLR test statistic under the null hypothesis (blue) and oscillation-signal hypothesis (orange), with the expected significance to this signal.
 
